# fpprofile-hq

./: .gitignore  CMakeLists.txt  CMakeSettings.json  TargetArch.cmake  azure-pipelines.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/games/redpoint/fpprofile/FPProfileTestClient/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/games/redpoint/fpprofile/FPProfileTestClient/: Logger.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/games/redpoint/fpprofile/FPProfileTestClient/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
fpcheck/: fpcheck.ps1
fpprofile/: CMakeLists.txt  Findsodium.cmake  fpprofile.c  fpprofile.h  netcode.c
sodium/: CMakeLists.txt
sodium/src/libsodium/include/sodium/: version.h
